# CombatLib

./: Ability.h  AbilityService.cpp  AbilityService.h  Attribute.cpp  Attribute.h  CMakeLists.txt  Entity.h  EntityService.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  Hitbox.h  Modifier.cpp  Modifier.h  Movement.cpp  Movement.h  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h  Source.cpp  Source.h  Status.h  Value.cpp  Value.h  concepts.h  events.h  headers.cpp  math.h
Ability/: Ability.h  AbilityService.cpp  AbilityService.h  Hitbox.h
Ability/Hitbox/: AABBHitbox.cpp  AABBHitbox.h  BasicHitbox.h  CachedHitbox.h  SphereHitbox.cpp  SphereHitbox.h  TargetedHitbox.h
Core/: Attribute.h  Modifier.h  Source.h  Value.h
Entity/: Entity.h  EntityService.h  Hittable.h
Event/: Event.h  EventBus.cpp  EventBus.h
Projectile/: Movement.h  Projectile.h  ProjectileManager.cpp  ProjectileManager.h  ProjectileSystem.cpp  ProjectileSystem.h
Projectile/Movement/: EntityMovement.h  LinearMovement.h  OneOffMovement.h  StaticMovement.h
ability/: Ability.h  AbilitySnapshot.h  ChildAbility.h  GroundTargetAbility.h  TargetedAbility.h  TargetlessAbility.h
